--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -27,9 +27,10 @@
         <td>@restaurant.Cuisine</td>
         <td>
             <a class="btn btn-lg" asp-page="./Detail" asp-route-restaurantId="@restaurant.Id"><i class="glyphicon glyphicon-zoom-in"></i></a>
+            <a class="btn btn-lg" asp-page="./Edit" asp-route-restaurantId="@restaurant.Id"><i class="glyphicon glyphicon-edit" ></i></a>
         </td>
     </tr>
     }
 </table>
 
-@Model.Message
+<a asp-page="./Edit" class="btn btn-primary">Add New</a>
